data/derived/comb/progs/unify/prog7209.ml.out
Characters 43-46:
  if e = VarX then "x";;
                   ^^^
Error: This expression has type string but an expression was expected of type
         unit
